syntax = "proto3";
option go_package = "github.com/rancher/opni/pkg/plugins/topology/pkg/apis/representation";

import "google/protobuf/empty.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "github.com/rancher/opni/pkg/apis/core/v1/core.proto";

package representation;

service TopologyRepresentation {
    // opni internal use
    rpc GetGraph(core.Reference) returns (TopologyGraph) {}

    // cluster id  --> kubernetes graph SVG
    rpc RenderGraph(core.Reference) returns (GraphSVG)  {
        option(google.api.http) = {
            post: "/topology/render"
            body: "*"
        };
    }

}

message TopologyGraph {
    core.Reference id = 1;
    bytes data = 2;
    GraphRepr repr = 3;
}

enum GraphRepr {
    None = 0;
    KubectlGraph = 1; 
}

message GraphSVG {
    string rawSVG = 1;
}
